Update Discord logo image source

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <a href="https://www.roblox.com/users/453133356/profile" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Roblox_Logo.svg/2048px-Roblox_Logo.svg.png" alt="Roblox" class="icon">
         </a>
-        <img src="https://www.clipartmax.com/png/middle/39-393163_company-discord-logo-png-white.png" alt="Discord" class="icon" onclick="copyUsername()">
+        <img src="https://cdn.freebiesupply.com/logos/large/2x/discord-logo-black-and-white.png" alt="Discord" class="icon" onclick="copyUsername()">
     </div>
     
     <div id="copyMessage" class="message">username copied to clipboard</div>
