--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Site</title>
     <style>
         body {
-            background-color: #00008B;
+            background-color: #0b0b1b;
             display: flex;
             flex-direction: column;
             justify-content: center;
