--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         </div>
         
         <div class="expandable-box">
-            <div class="box-header" onclick="toggleBox('intro')">Introduction</div>
+            <div class="box-header" onclick="toggleBox('intro')">Introductions</div>
             <div id="intro" class="box-content">
                 <div class="box-content-inner">
                     <ul>Hello! My name is Andrew, otherwise known as Spookitys online, and welcome to my slice of the internet!
