Prevent right-click context menu in index.html
Added event listener to prevent right-click context menu.

--- a/index.html
+++ b/index.html
@@ -487,6 +487,11 @@ Spookitys Protcol Initiated [Website Version: 0.0102]
                 toggleTerminal(false);
             }
         });
+
+        // Prevent right-click context menu
+        document.addEventListener('contextmenu', function(e) {
+            e.preventDefault();
+        });
     </script>
 </body>
 </html>
