Prevent default context menu on right-click

--- a/index.html
+++ b/index.html
@@ -492,6 +492,9 @@ Spookitys Protcol Initiated [Website Version: 0.0102]
                 toggleTerminal(false);
             }
         });
+        document.addEventListener('contextmenu', function(e) {
+            e.preventDefault();
+        });
     </script>
 </body>
 </html>
