Change escape key redirect to index.html

--- a/tetris.html
+++ b/tetris.html
@@ -491,7 +491,7 @@ document.addEventListener('keydown', (e) => {
         playerReset(); updateScore();
     }
     else if (k === 'p') { e.preventDefault(); paused = !paused; }
-    else if (k === 'escape') { window.location.href = 'MySite.html'; }
+    else if (k === 'escape') { window.location.href = 'index.html'; }
 });
 
 // Mobile buttons hook
