Enhance introduction and media sections in index.html
Added additional personal information and media links to the introduction section.

--- a/index.html
+++ b/index.html
@@ -293,6 +293,9 @@
                 <div class="box-content-inner">
                     <ul>Hello! My name is Andrew, otherwise known as Spookitys online, and welcome to my slice of the internet!
                     <li>I'm a developer in LUA and hobbyist with a passion for creating fun experiences and games on the internet.
+                    <li>I'm 16 years old currently and in high school as a junior, I plan on going to college for computer science!
+                    <li>My work is currently in LuaU for Roblox, but I dabble in other languages such as JavaScript.
+                    <li>I mostly do freelancing work so I don't have many projects to show off, but expect some soon! (I am not currently accepting commissions.)
                     <ul>
                 </div>
             </div>
@@ -322,6 +325,22 @@
                         <li class="category">    Looking Forward To</li>
                         <li>        <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong" target="_blank" class="game-link">Hollow Knight / Silksong</a></li>
                         <li>        <a href="https://www.youtube.com/watch?v=HTs0s6urogA" target="_blank" class="game-link">Give Me Your Best! [UNRELEASED]</a></li>
+                        <li></li>
+                        <li class="category">Media:</li>
+                        <li class="category">    Shows</li>
+                        <li>        <a href="https://www.paramountplus.com/shows/dexter/" target="_blank" class="game-link">Dexter</a></li>
+                        <li>        <a href="https://www.paramountplus.com/shows/dexter-new-blood/" target="_blank" class="game-link">Dexter: New Blood</a></li>
+                        <li>        <a href="https://www.paramountplus.com/shows/dexter-original-sin/" target="_blank" class="game-link">Dexter: Original Sin</a></li>
+                        <li>        <a href="https://www.paramountplus.com/shows/dexter-resurrection/" target="_blank" class="game-link">Dexter: Ressurrection</a></li>
+                        <li>        <a href="https://www.adultswim.com/videos/rick-and-morty" target="_blank" class="game-link">Rick and Morty</a></li>
+                        <li>        <a href="https://www.disneyplus.com/browse/entity-8f8c5cbb-e5ba-4285-9e2c-86abcac9fd50" target="_blank" class="game-link">LOKI</a></li>
+                        <li>        <a href="https://www.amazon.com/INVINCIBLE-SEASON-1/dp/B08WJN83XZ" target="_blank" class="game-link">Invincible</a></li>
+                        <li class="category">    Movies</li>
+                        <li>        <a href="https://www.netflix.com/title/70305903" target="_blank" class="game-link">Interstellar</a></li>
+                        <li>        <a href="https://www.netflix.com/title/11819086" target="_blank" class="game-link">The Truman Show</a></li>
+                        <li>        <a href="https://www.disneyplus.com/browse/entity-9a136e06-852a-41bf-b71d-fa061cb43225" target="_blank" class="game-link">Avengers: Infinity War</a></li>
+                        <li class="category">    Looking Forward To</li>
+                        <li>        <a href="https://www.netflix.com/title/70241956" target="_blank" class="game-link">Hannibal</a></li>
                     </ul>
                 </div>
             </div>
